--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -54,5 +54,10 @@
   &__link {
     text-decoration: none;
     color: $dark_text;
+    transition: color 0.3s ease-in-out;
+
+    &:hover {
+      color: $red;
+    }
   }
 }
