--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,9 +3,11 @@
 @import "./header";
 @import "./about";
 @import "./relations";
+@import "./users";
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
